--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>To-Do List</title>
-    <link rel="icon" href="%BASE_URL%favicon.ico" />
+    <link rel="icon" href="/To-Do-List-App/assets/favicon.ico" />
   </head>
   <body>
     <div id="root"></div>
